warings as errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(libpru)
 add_library(pru SHARED pru.c ti/ti-pru.c ti/am335x/ti-am335x-pru.c)
 add_definitions(-I${CMAKE_SOURCE_DIR} -I${CMAKE_SOURCE_DIR}/ti -I${CMAKE_SOURCE_DIR}/ti/am335x)
 set_property(TARGET pru PROPERTY SOVERSION "3")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Weverything -fblocks")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -fblocks")
 target_link_libraries(pru pthread BlocksRuntime)
 install(TARGETS pru DESTINATION lib)
 install(FILES libpru.h DESTINATION include)
